# WSB_Agent

./: .env.example  .gitignore  README.md  SPEC.md  package-lock.json  pyproject.toml
config/: settings.yaml
data/: ticker_whitelist.csv  wsb_agent.db-shm  wsb_agent.db-wal  wsb_lexicon.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AccountChart.tsx  DashboardHeader.tsx  IntelligencePanel.tsx  PortfolioStats.tsx  SignalFeed.tsx  WatchlistSidebar.tsx
frontend/src/hooks/: useAgentData.ts
scripts/: clear_signals.py  run_pipeline.py  run_portfolio.py  run_server.py
src/wsb_agent/: __init__.py  models.py
src/wsb_agent/api/: server.py
src/wsb_agent/features/: attention.py  llm_sentiment.py  sentiment.py  tickers.py
src/wsb_agent/ingestion/: market.py  mock_reddit.py  reddit.py
src/wsb_agent/portfolio/: broker.py  manager.py
src/wsb_agent/signals/: engine.py  market_features.py
src/wsb_agent/storage/: database.py
src/wsb_agent/utils/: config.py  logging.py  notifications.py
tests/: test_api_server.py  test_attention.py  test_config.py  test_database.py  test_llm_sentiment.py  test_market.py  test_portfolio.py  test_reddit.py  test_sentiment.py  test_signals.py  test_tickers.py
tests/fixtures/: sample_posts.json
